--- a/app/views/online_pay/_online_pay_detail_title.html.erb
+++ b/app/views/online_pay/_online_pay_detail_title.html.erb
@@ -1,9 +1,9 @@
 <tr>
-	<td>支付唯一标识</td>
-	<td>金额</td>
-	<td>状态</td>
-	<td>回调状态</td>
-	<td>支付类型与子类型</td>
-	<td>系统_订单号</td>
-	<td class="td_50">备注</td>
+	<th>支付唯一标识</th>
+	<th>金额</th>
+	<th>状态</th>
+<!-- 	<th>回调状态</th> -->
+	<th>支付类型与子类型</th>
+	<th>系统_订单号</th>
+	<th>备注</th>
 </tr>
