--- a/app/views/online_pay/show.html.erb
+++ b/app/views/online_pay/show.html.erb
@@ -1,11 +1,20 @@
-<% @page_title="支付明细" %>
+<div class="container-fluid">
+	<% @page_title="支付明细" %>
+	<% content_for :breadcrumb do %>
+		<li> <%=link_to t('用户明细'),registe_index_path,method: :get%> <span class="divider">/</span></li>
+	<% end %>
 
-<%= render partial:"finance_water/user",locals: {user: @user} %>
- <%= link_to '返回',:back %>
-<div id="online_pay_details_content">
-	<table id="online_pay_details_table">
-		<%= render partial: "online_pay_detail_title" %>
-		<%= render partial: "online_pay_detail_content",collection: @online_pays,as: :online_pay %>
-	</table>
-	<%= paginate @online_pays %>
+	<div class="row-fluid">
+		<div class="row-fluid">
+			<%= render partial:"finance_water/user",locals: {user: @user} %>
+		</div>
+
+		<div class="row-fluid">
+			<table class="table">
+				<%= render partial: "online_pay_detail_title" %>
+				<%= render partial: "online_pay_detail_content",collection: @online_pays,as: :online_pay %>
+			</table>
+			<%= paginate @online_pays %>
+		</div>
+	</div>
 </div>
