--- a/app/views/transaction_reconciliation/index.html.erb
+++ b/app/views/transaction_reconciliation/index.html.erb
@@ -1,43 +1,59 @@
-<% @page_title="财务对账明细" %>
+<div class="container-fluid">
+<% @page_title="财务明细对账" %>
+	<div class="row-fluid">
+		<div class="alert alert-info">
+			<button type="button" class="close" data-dismiss="alert">×</button>
+			<strong>提示:</strong> 请输入查询条件进行查询!
+		</div>
+		<div class="row-fluid">
+			<div class="well">
+			        <%= form_tag transaction_reconciliation_index_path,method:"get",remote: :true do %>
+				 <%= label_tag(:l1, "支付类型:",class:"label_inline") %> 
+				 <%= select_tag(:payway,options_for_select([["",""],["paypal","paypal"],["sofort","sofort"],["支付宝","alipay"]])) %> 
+				 <%= label_tag(:l2, "支付子类型:",class:"label_inline") %>
+				 <%= select_tag(:paytype,options_for_select([["",""],["国内支付","transaction"],["海外支付","oversea"]])) %> 
+				 <%= label_tag(:l3, "对账状态:",class:"label_inline") %> 
+				 <%= select_tag(:reconciliation_flag,options_for_select([["",""],["未对账","0"],["对账失败","1"],["对账成功","2"]])) %> 
+				 </br>
+				 <%= label_tag(:l4, "交易开始时间:",class:"label_inline") %> <%= datetime_field_tag(:start_time) %>
+				 <%= label_tag(:l5, "交易结束时间:",class:"label_inline") %> <%= datetime_field_tag(:end_time) %>
+				 <%= label_tag(:l6, "订单号:",class:"label_inline") %> <%= datetime_field_tag(:transactionid) %>
+				 <div class="btn-toolbar">
+					 <%= submit_tag("查询",class: "btn btn-primary") %>
+				          	<%=button_tag("清除条件",type: 'button',class: "btn",id: "button_clear") %>
+			          	</div>
+			        <% end %>
+			</div>
+		</div>
+	</div>
 
-<div id="reconciliation_details_condition">
-<%= form_tag transaction_reconciliation_index_path,method:"get",remote: :true do %>
-	<fieldset>
-		<legend>请输入查询条件</legend>
-		 <%= label_tag(:l1, "支付类型:") %> 
-		 <%= select_tag(:payway,options_for_select([["",""],["paypal","paypal"],["sofort","sofort"],["支付宝","alipay"]])) %> 
-		 <%= label_tag(:l2, "支付子类型:") %>
-		 <%= select_tag(:paytype,options_for_select([["",""],["国内支付","transaction"],["海外支付","oversea"]])) %> 
-		 <%= label_tag(:l3, "对账状态:") %> 
-		 <%= select_tag(:reconciliation_flag,options_for_select([["",""],["未对账","0"],["对账失败","1"],["对账成功","2"]])) %> 
-		 </br>
-		 <%= label_tag(:l4, "交易开始时间:") %> <%= datetime_field_tag(:start_time) %>
-		 <%= label_tag(:l5, "交易结束时间:") %> <%= datetime_field_tag(:end_time) %>
-		 <%= label_tag(:l6, "订单号:") %> <%= datetime_field_tag(:transactionid) %>
-		</br>
-		 <%= submit_tag("查询") %>
+	<div class="row-fluid">
+		<% unless flash[:notice].blank? %>
+			<div class="alert alert-info">
+				<button type="button" class="close" data-dismiss="alert">×</button>
+				<%=flash[:notice]%>
+			</div>
+		<% end %>
 
-	          	<%=button_tag("清除条件",type: 'button',class: "button_clear") %>
-	</fieldset>
-<% end %>
-</div>
-
-<div id="reconciliation_details_content">
-	<table id="reconciliation_details_table">
-		<tr>
-			<td>支付类型</td>
-			<td> 子类型</td>
-			<td>订单号</td>
-			<td>对账状态</td>
-			<td>金额</td>
-			<td>支付系统返回状态</td>
-			<td>对账备注</td>
-			<td>交易时间</td>
-		</tr>
-		
-		<%= render partial: "index",collection: @reconciliation_details,as: :reconciliation_detail %>
-	</table>
-	<div class="div_paginate">
-		<%= render partial: "layouts/paginate_replace_ajax",locals: {page_array: @reconciliation_details} %>
+		<div class="well">
+			<table class="table" id="reconciliation_details_table">
+				<thead>
+					<tr>
+						<th>支付类型</th>
+						<th> 子类型</th>
+						<th>订单号</th>
+						<th>对账状态</th>
+						<th>金额</th>
+						<th>支付系统返回状态</th>
+						<th>对账备注</th>
+						<th>交易时间</th>
+					</tr>
+				</thead>
+				<%= render partial: "index",collection: @reconciliation_details,as: :reconciliation_detail %>
+			</table>
+			<div class="div_paginate">
+				<%= render partial: "layouts/paginate_replace_ajax",locals: {page_array: @reconciliation_details} %>
+			</div>
+		</div>
 	</div>
 </div>
