--- a/app/views/transaction_reconciliation/report.html.erb
+++ b/app/views/transaction_reconciliation/report.html.erb
@@ -1,43 +1,49 @@
+<div class="container-fluid">
 <% @page_title="财务汇总" %>
-
-<div id="reconciliation_details_condition">
-<%= form_tag transaction_reconciliation_report_path,method:"post",remote: :true do %>
-	<fieldset>
-		<legend>请输入查询条件</legend>
-		 <%= label_tag(:l1, "支付类型:") %> 
-		 <%= select_tag(:payway,options_for_select([["",""],["paypal","paypal"],["sofort","sofort"],["支付宝","alipay"]])) %> 
-		 <%= label_tag(:l2, "支付子类型:") %>
-		 <%= select_tag(:paytype,options_for_select([["",""],["国内支付","transaction"],["海外支付","oversea"]])) %> 
-		 </br>
-		 <%= label_tag(:l4, "交易开始时间:") %> <%= datetime_field_tag(:start_time) %>
-		 <%= label_tag(:l5, "交易结束时间:") %> <%= datetime_field_tag(:end_time) %>
-		</br>
-		 <%= submit_tag("查询",class: "button_submit_time") %>
-
-	          	<%=button_tag("清除条件",type: 'button',class: "button_clear") %>
-	</fieldset>
-<% end %>
-</div>
-
-<% unless @finance_summary.blank? %>
-	<div id="reconciliation_summary_content">
-		<table id="reconciliation_summary_table">
-			<tr>
-				<td>总交易比数</td>
-				<td id="td_replace_total_num"><%=@finance_summary.total_num%></td>
-				<td>成功比数</td>
-				<td id="td_replace_succ_num"><%=@finance_summary.succ_num%></td>
-				<td>失败比数</td>
-				<td id="td_replace_fail_num"><%=@finance_summary.fail_num%></td>
-			</tr>
-			<tr>
-				<td>总交易金额</td>
-				<td id="td_replace_total_amount"><%=@finance_summary.total_amount%></td>
-				<td>成功金额</td>
-				<td id="td_replace_succ_amount"><%=@finance_summary.succ_amount%></td>
-				<td>失败金额</td>
-				<td id="td_replace_fail_amount"><%=@finance_summary.fail_amount%></td>
-			</tr>
-		</table>
+	<div class="row-fluid">
+		<div class="alert alert-info">
+			<button type="button" class="close" data-dismiss="alert">×</button>
+			<strong>提示:</strong> 请输入查询条件进行查询!
+		</div>
+		<div class="row-fluid">
+			<div class="well">
+			<%= form_tag transaction_reconciliation_report_path,method:"post",remote: :true do %>
+				 <%= label_tag(:l1, "支付类型:",class:"label_inline") %> 
+				 <%= select_tag(:payway,options_for_select([["",""],["paypal","paypal"],["sofort","sofort"],["支付宝","alipay"]])) %> 
+				 <%= label_tag(:l2, "支付子类型:",class:"label_inline") %>
+				 <%= select_tag(:paytype,options_for_select([["",""],["国内支付","transaction"],["海外支付","oversea"]])) %> 
+				 </br>
+				 <%= label_tag(:l4, "交易开始时间:",class:"label_inline") %> <%= datetime_field_tag(:start_time) %>
+				 <%= label_tag(:l5, "交易结束时间:",class:"label_inline") %> <%= datetime_field_tag(:end_time) %>
+				 <div class="btn-toolbar">
+					 <%= submit_tag("查询",class: "btn btn-primary") %>
+				          	<%=button_tag("清除条件",type: 'button',class: "btn",id: "button_clear") %>
+			          	</div>
+			<% end %>
+			</div>
+		</div>
 	</div>
-<% end %>
+
+	<div class="row-fluid">
+		<div class="well">
+			<table class="table">
+				<tr>
+					<td>总交易比数</td>
+					<td id="td_replace_total_num"><%=@finance_summary.total_num%></td>
+					<td>成功比数</td>
+					<td id="td_replace_succ_num"><%=@finance_summary.succ_num%></td>
+					<td>失败比数</td>
+					<td id="td_replace_fail_num"><%=@finance_summary.fail_num%></td>
+				</tr>
+				<tr>
+					<td>总交易金额</td>
+					<td id="td_replace_total_amount"><%=@finance_summary.total_amount%></td>
+					<td>成功金额</td>
+					<td id="td_replace_succ_amount"><%=@finance_summary.succ_amount%></td>
+					<td>失败金额</td>
+					<td id="td_replace_fail_amount"><%=@finance_summary.fail_amount%></td>
+				</tr>
+			</table>
+		</div>
+	</div>
+</div>
