--- a/app/views/admin_manage/sign_in.html.erb
+++ b/app/views/admin_manage/sign_in.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="no_container-fluid">
 <% @page_title="登入界面" %>
 	<div class="row-fluid">
 		<div class="well">
