--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,3 +18,10 @@ label.label_inline {
   display: inline;
   margin-bottom: 5px;
 }
+
+div.no_content {
+  background: #fff;
+  margin-top: 6px;
+  border-left: 1px solid #000000;
+  border-left: 1px solid #111;
+}
