--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,14 @@
                     <a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
                         <% if session[:admin].blank? %>
                         	尚未登入
-                        <% else %>
-                        	<%=session[:admin]%>
+                        <% else %>                           
+                        	<i class="icon-user"></i> <%=session[:admin]%>
+                           	<i class="icon-caret-down"></i>
+		<ul class="dropdown-menu">
+			<li><a tabindex="-1" href="#">设置</a></li>
+			<li class="divider"></li>
+			<li><%=link_to t('登出'),admin_manage_sign_out_path,method: :post,tabindex: -1%></li>
+		</ul>
                         <% end %>
                     </a>
                 
@@ -26,16 +32,16 @@
     </div>
 </div>
 
-<div class="sidebar-nav">
-	<% if session[:admin].present? %>
-	    <a href="#user-menu" class="nav-header" data-toggle="collapse"><i class="icon-user"></i>用户管理</a>
+<% if session[:admin].present? %>
+	<div class="sidebar-nav">	
+	    <a href="#user-menu" class="nav-header" data-toggle="collapse"><i class="icon-user-md"></i>用户管理</a>
 	    <ul id="user-menu" class="nav nav-list collapse in">
 	    <% if session[:admin_level]>=0 %>
 	        <li> <%=link_to t('用户'),registe_index_path,method: :get%> </li>
 	    <% end %>
 	    </ul>
 
-	    <a href="#finance-menu" class="nav-header" data-toggle="collapse"><i class="icon-finance"></i>财务管理</a>
+	    <a href="#finance-menu" class="nav-header" data-toggle="collapse"><i class="icon-th-list"></i>财务管理</a>
 	    <ul id="finance-menu" class="nav nav-list collapse in">
 	    <% if session[:admin_level]>=0 %>
 	        <li > <%=link_to t('财务对账'),transaction_reconciliation_index_path,method: :get%> </li>
@@ -48,7 +54,7 @@
 	        <li > <%=link_to t('文件上传'),upload_file_index_path,method: :get%> </li>
 	    </ul>
 
-	    <a href="#simulate-menu" class="nav-header" data-toggle="collapse"><i class="icon-simulate"></i>模拟交易</a>
+	    <a href="#simulate-menu" class="nav-header" data-toggle="collapse"><i class="icon-indent-left"></i>模拟交易</a>
 	    <ul id="simulate-menu" class="nav nav-list collapse in">
 	    <% if session[:admin_level]>=0 %>
 	        <li > <%= link_to '模拟支付',simulation_path %> </li>
@@ -56,10 +62,14 @@
 	    <% end %>
 	    </ul>
 
-	<% end %>
-</div>
+	</div>
+<% end %>
 
-<div class="content">
+<% if session[:admin].present? %>
+        <div class="content">
+ <% else %>
+        <div class="no_content">
+ <% end %>
 	<div class="header">
 		<div class="stats">
 			<p class="stat"><span class="number">0</span>tasks</p>
