--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,3 +25,11 @@ div.no_content {
   border-left: 1px solid #000000;
   border-left: 1px solid #111;
 }
+
+form.button_to {
+  display: inline-block;
+}
+
+.btn-toolbar form.button_to + form.button_to {
+  margin-left: 5px;
+}
