--- a/app/views/finance_water/new.html.erb
+++ b/app/views/finance_water/new.html.erb
@@ -32,7 +32,7 @@
           <%= hidden_field_tag :channel,"web" %>
           <%= hidden_field_tag :operator,session[:admin] %>
           <%= hidden_field_tag :datetime,Time.now%>
-          <%= submit_tag("提交") %>
+          <%= submit_tag("提交",class: "btn btn-primary") %>
           <% end %>
         </div>
       </div>
