--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,13 +37,14 @@
 	    <a href="#user-menu" class="nav-header" data-toggle="collapse"><i class="icon-user-md"></i>用户管理</a>
 	    <ul id="user-menu" class="nav nav-list collapse in">
 	    <% if session[:admin_level]>=0 %>
-	        <li> <%=link_to t('用户'),registe_index_path,method: :get%> </li>
+	        <li> <%=link_to t('用户明细'),registe_index_path,method: :get,class: "dd"%> </li>
 	    <% end %>
 	    </ul>
 
 	    <a href="#finance-menu" class="nav-header" data-toggle="collapse"><i class="icon-th-list"></i>财务管理</a>
 	    <ul id="finance-menu" class="nav nav-list collapse in">
 	    <% if session[:admin_level]>=0 %>
+	        <li > <%=link_to t('交易查询'),index_online_pay_path,method: :post%> </li>
 	        <li > <%=link_to t('财务对账'),transaction_reconciliation_index_path,method: :get%> </li>
 	        <li > <%=link_to t('财务汇总'),transaction_reconciliation_report_path,method: :post%> </li>
 	    <% end %>
