--- a/app/views/online_pay/_online_pay_and_user_detail_content.html.erb
+++ b/app/views/online_pay/_online_pay_and_user_detail_content.html.erb
@@ -1,4 +1,5 @@
 <tr class="tr_relpace">
+	<td><%=link_to  online_pay.user.username,registe_index_path(system: online_pay.user.system,username: online_pay.user.username),method: :get%></td>
 	<td><%= online_pay.reconciliation_id %></td>
 	<td><%= online_pay.amount %></td>
 	<td><%= online_pay.currency %></td>
