--- a/app/views/online_pay/_online_pay_detail_content.html.erb
+++ b/app/views/online_pay/_online_pay_detail_content.html.erb
@@ -1,7 +1,7 @@
 <tr class="tr_relpace">
 	<td><%= online_pay.reconciliation_id %></td>
 	<td><%= online_pay.amount %></td>
-	<td><%= online_pay.currency %></td>
+	<td><%= online_pay.get_convert_currency() %></td>
 	<td><%= status_mapping(online_pay.status) %></td>
 <!-- 	<td><%= online_pay.callback_status %></td> -->
 	<td><%= payway_paytype_mapping(online_pay.payway.camelize + online_pay.paytype.camelize) %></td>
