--- a/app/views/transaction_reconciliation/report.html.erb
+++ b/app/views/transaction_reconciliation/report.html.erb
@@ -7,9 +7,9 @@
 		</div>
 		<div class="row-fluid">
 			<div class="well">
-			<%= form_tag transaction_reconciliation_report_path,method:"post",remote: :true do %>
+			<%= form_tag transaction_reconciliation_report_path,method:"get",remote: :true do %>
 				 <%= label_tag(:l1, "支付类型:",class:"label_inline") %> 
-				 <%= select_tag(:payway,options_for_select([["",""],["paypal","paypal"],["sofort","sofort"],["支付宝","alipay"]])) %> 
+				 <%= select_tag(:payway,options_for_select([["",""],["paypal","paypal"],["sofort","sofort"],["支付宝","alipay"],["积分","score"],["电子现金","e_cash"]])) %> 
 				 <%= label_tag(:l2, "支付子类型:",class:"label_inline") %>
 				 <%= select_tag(:paytype,options_for_select([["",""],["国内支付","transaction"],["海外支付","oversea"]])) %> 
 				 </br>
