--- a/app/views/upload_file/index.html.erb
+++ b/app/views/upload_file/index.html.erb
@@ -1,6 +1,13 @@
 <div class="container-fluid">
 <% @page_title="文件上传" %>
 	<div class="row-fluid">
+		<% unless flash[:notice].blank? %>
+			<div class="alert alert-info">
+				<button type="button" class="close" data-dismiss="alert">×</button>
+				<%=flash[:notice]%>
+			</div>
+		<% end %>
+
 		<div class="alert alert-info">
 			<button type="button" class="close" data-dismiss="alert">×</button>
 			<strong>提示:</strong> 请选择业务类型并上传文件!
@@ -8,7 +15,7 @@
 		<div class="well">
 			<%= form_tag upload_file_upload_path,multipart:true do %>
 				<%= label_tag(:l1, "上传业务类型:") %>
-				<%= select_tag "file_type", options_for_select([ ["sofort对账明细","sofort_transaction"] ], "sofort_transaction") %>
+				<%= select_tag "file_type", options_for_select([ ["sofort对账明细","sofort_transaction"],["荷兰银行事务历史记录","NL_ABN_Bank"],["德国银行事务历史记录","DE_BOC_Bank"] ], "") %>
 				<%= label_tag(:l2, "选择文件:") %>
 				<%= file_field_tag :file %>
 				 <div class="btn-toolbar">
