--- a/app/views/upload_file/index.html.erb
+++ b/app/views/upload_file/index.html.erb
@@ -8,6 +8,13 @@
 			</div>
 		<% end %>
 
+		<% unless flash[:error].blank? %>
+			<div class="alert alert-info">
+				<button type="button" class="close" data-dismiss="alert">×</button>
+				<%=flash[:error]%>
+			</div>
+		<% end %>
+
 		<div class="alert alert-info">
 			<button type="button" class="close" data-dismiss="alert">×</button>
 			<strong>提示:</strong> 请选择业务类型并上传文件!
@@ -15,7 +22,7 @@
 		<div class="well">
 			<%= form_tag upload_file_upload_path,multipart:true do %>
 				<%= label_tag(:l1, "上传业务类型:") %>
-				<%= select_tag "file_type", options_for_select([ ["sofort对账明细","sofort_transaction"],["荷兰银行事务历史记录","NL_ABN_Bank"],["德国银行事务历史记录","DE_BOC_Bank"] ], "") %>
+				<%= select_tag "file_type", options_for_select([ ["sofort对账明细","sofort_transaction"],["荷兰银行事务历史记录","NL_ABN_Bank"],["德国银行事务历史记录","DE_BOC_Bank"] ], "NL_ABN_Bank") %>
 				<%= label_tag(:l2, "选择文件:") %>
 				<%= file_field_tag :file %>
 				 <div class="btn-toolbar">
