--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,7 @@
 	    <% if session[:admin_level]>=0 %>
 	        <li > <%=link_to t('交易查询'),index_online_pay_path,method: :get%> </li>
 	        <li > <%=link_to t('财务对账'),transaction_reconciliation_index_path,method: :get%> </li>
+	        <li > <%=link_to t('财务确认'),transaction_reconciliation_confirm_search_path,method: :get%> </li>
 	        <li > <%=link_to t('财务汇总'),transaction_reconciliation_report_path,method: :get%> </li>
 	    <% end %>
 	    </ul>
