--- a/app/views/finance_water/new.html.erb
+++ b/app/views/finance_water/new.html.erb
@@ -29,7 +29,7 @@
           <%= label_tag(:label4, "新增原因:",class:"label_inline") %> 
           <%= text_area_tag(:reason,"#{session[:admin]} 手动调整" ,size: "40*5") %>
           <%= hidden_field_tag :system,@user.system %>
-          <%= hidden_field_tag :channel,"web" %>
+          <%= hidden_field_tag :channel,"finance_web" %>
           <%= hidden_field_tag :operator,session[:admin] %>
           <%= hidden_field_tag :datetime,Time.now%>
           <%= submit_tag("提交",class: "btn btn-primary") %>
