--- a/app/views/transaction_reconciliation/confirm_search.html.erb
+++ b/app/views/transaction_reconciliation/confirm_search.html.erb
@@ -15,7 +15,7 @@
 		<div class="row-fluid">
 			<div class="well">
 				<%= form_tag transaction_reconciliation_confirm_path,method:"post" do %>
-					 <%= label_tag(:l1, "确认发票日期:") %> <%= datetime_field_tag(:end_time) %>
+					<!--  <%= label_tag(:l1, "确认发票日期:") %> <%= datetime_field_tag(:end_time) %> -->
 					 <%= label_tag(:l2, "最晚对账成功时间:") %> <%= text_field_tag(:max_updated_at_display,@max_updated_at,disabled: true) %>
 					 <%= hidden_field_tag(:max_updated_at,@max_updated_at) %>
 					 <%= label_tag(:l3, "对账成功未确认比数:") %> <%= text_field_tag(:confirm_num_display,@confirm_num,disabled: true) %>	
