--- a/app/views/transaction_reconciliation/confirm_search.html.erb
+++ b/app/views/transaction_reconciliation/confirm_search.html.erb
@@ -10,12 +10,12 @@
 
 		<div class="alert alert-info">
 			<button type="button" class="close" data-dismiss="alert">×</button>
-			<strong>提示:</strong> 请输入确认发票日期!
+			<strong>提示:</strong> 请输入对账日期进行查询,空则默认为所有未对账数据!
 		</div>
 		<div class="row-fluid">
 			<div class="well">
 				<%= form_tag transaction_reconciliation_confirm_path,method:"post" do %>
-					<!--  <%= label_tag(:l1, "确认发票日期:") %> <%= datetime_field_tag(:end_time) %> -->
+				 	 <%= label_tag(:l1, "对账日期:") %> <%= datetime_field_tag(:end_time,@transaction_date,class: "auto_refresh") %>
 					 <%= label_tag(:l2, "最晚对账成功时间:") %> <%= text_field_tag(:max_updated_at_display,@max_updated_at,disabled: true) %>
 					 <%= hidden_field_tag(:max_updated_at,@max_updated_at) %>
 					 <%= label_tag(:l3, "对账成功未确认比数:") %> <%= text_field_tag(:confirm_num_display,@confirm_num,disabled: true) %>	
